# ss7_sigtran

./: README.md  README.md~  build.sh  env.sh  readme.ayub.txt
misc_lib_src/: pcsc-lite-1.8.26.tar.bz2
misc_lib_src/pcsc-lite-1.8.26/: ChangeLog.git  Makefile  config.h  config.status  configure  libtool
misc_lib_src/pcsc-lite-1.8.26/doc/: Makefile  doxygen.conf  pcscd.8  reader.conf.5
misc_lib_src/pcsc-lite-1.8.26/etc/: Makefile  pcscd.service  pcscd.socket
misc_lib_src/pcsc-lite-1.8.26/src/: Makefile  configfile.c  libpcsclite.pc  pcsc-wirecheck  pcsc-wirecheck-gen  (+4 more)
src/: .libosmocore.build.sh.un~  .readme.ayub.txt.un~  readme.ayub.txt  readme.ayub.txt~
src/asn1c/: Makefile.in  config.h.in  configure
src/libosmo-asn1-tcap/: Makefile  clean.sh  install.sh~
src/libosmo-asn1-tcap_old/: .build.sh.un~  .install.sh.un~  build.sh  install.sh  install.sh~
src/libosmo-asn1-tcap_old/include_old/: AARQ-apdu.h  ANY.h  AUDT-apdu.h  BOOLEAN.h  DestTransactionID.h  DialoguePDU.h  GeneralProblem.h  InvokeIdType.h  InvokeParameter.h  Makefile.am  OBJECT_IDENTIFIER.h  Parameter.h  RLRQ-apdu.h  ReturnError.h  ReturnErrorProblem.h  UniDialoguePDU.h  Unidirectional.h  asn_SEQUENCE_OF.h  constr_CHOICE.h
src/sts-src/: Makefile  Makefile~  TODO  compare-mem.awk  compare-mem.awk~  defs.h  defs.h~  install.sh  lfq.c  lfq.h  main.c  main.c~  main.h  makefile.inc  makefile.inc~  module.h  mymdebug.c~  mymdebug.h  mymdebug.h~  parse-mem.awk  poll.h  poll.h~  readme.ayub.txt  run-1.sh  run.sh  run.sh~  sigtran.cfg  sigtran.cfg~  sigtran_test.cfg  sigtran_test.cfg~  trace-zillur.pcap
(+473 files in other folders)
